did most finalization

--- a/public/pages/conclusion.htm
+++ b/public/pages/conclusion.htm
@@ -1,5 +1,5 @@
 <p>I hope these tips help out with your typography challenges on your website.
-    If needed, you can always refer back to the Summary section.</p>
+    If needed, you can always refer back to the <a href="summary">Summary section</a>.</p>
 
 <p>Also, I found these resources most useful as a reference:</p>
 <span class="resources">
