--- a/public/pages/intro.htm
+++ b/public/pages/intro.htm
@@ -1,2 +1,5 @@
-<p>So a small group of programmers create a website and it works perfectly, but the typography looks off and they&#39;re not sure what to do.</p>
-<p>Here are four quick tips to improve your typography on your website.</p>
+<p>Coming from a Computer Science background, I found that many developers lack the design knowledge to make their site
+look awesome. Typography was one thing that seemed really foreign to me. So I made this
+website to share what I learned.</p>
+
+<p>Hope this helps with your website!</p>
