--- a/public/pages/size_weight.htm
+++ b/public/pages/size_weight.htm
@@ -7,8 +7,8 @@ The <strong>body usually has font sizes of 12 to 14 pixels</strong>.</p>
 <p>When choosing a font size, <strong>follow standard scaling</strong>, 
 a set of pre-defined sizes, to increase harmony between type. You can see all 
 the scaling sizes in the picture below.</p>
-<p>To implement font size, simply use the <i>font-size</i>
-CSS property.</p>
+
+<img src="/images/size.png" alt="size_scaling">
 
 <h3>Weight</h3>
 <p>There are two reasons that drive the selection of weight:</p>
@@ -26,6 +26,9 @@ clean, noticeable and readable. Underlining adds noise to the design and are
 often associated with links. Italicization can be hard to see. Capitalized 
 letters are harder to read because the letters have more similar height and 
 look.</p>
+
+<img src="/images/weight.jpg" alt="different_weighting">
+
 <p>Different colors can be used to add or remove weight.
 To de-emphasize text, limit the contrast of the text to its 
 background without changing the text&#39;s color. In fact, most web sites have a 
@@ -33,7 +36,19 @@ white background and text color a bit lighter than pure black.</p>
 <p>Try to <strong>limit combinations and avoid
 overusing weighting methods</strong>.</p>
 
-<p>Implementation varies for each method, see the following code for weighting
+<h3>Example</h3>
+<p>Again, User Expierence Magazine's website will be used to show implementation of size and weight in this
+<a href="/engage/size_weight/engage.html" target="_blank">module</a>.</p>
+
+<h3>Implementation</h3>
+ <p>To implement font size, simply use the <i>font-size</i>
+CSS property, as shown below.</p>
+
+<code>.some_class {<br />
+&nbsp;&nbsp;&nbsp;font-size: 1em;<br />
+}</code>
+
+<p>Weight implementation varies for each method, see the following code for weighting
 methods in CSS.</p>
 
 <code>.some_class {<br />
