--- a/public/pages/hierarchy.htm
+++ b/public/pages/hierarchy.htm
@@ -6,3 +6,4 @@ show their relative importance to other text. When selecting these typographic
 attributes, just remember to <strong>consider how the text
 stands our relative to other text and the text content&#39;s importance to the user</strong>
 (and their situation). This is very important in the design.</p>
+<p>User Experience Magazine's hierarchy is shown in this <a href="/engage/hierarchy/engage.html" target="_blank">interactive module</a>.</p>
