--- a/public/pages/space.htm
+++ b/public/pages/space.htm
@@ -9,10 +9,7 @@ site.</p>
 measure should be about <strong>55 to 85 characters </strong>
 in length (including spaces) to make it easier to read. However, most sites have 
 a measure from 73 and 90 characters.</p>
-<p>Implementing measure in your web site varies upon the situation. However, a 
-good guideline is to adopt a grid system to help, such as the
-<a href="http://960.gs/">960 grid system</a>.</p>
-<p>Picture of Measure</p>
+<img src="/images/measure.png" alt="measure">
 
 <h3>Leading</h3>
 <p><strong>Leading</strong> is the vertical space between lines of text. It is 
@@ -22,6 +19,7 @@ lines.</p>
 <p>Statistically, the <strong>average line height to body copy 
 font size ratio (line height ÷ body copy font size) on web sites is 1.48 </strong>
 (1.5 is recommended).</p>
+<img src="/images/leading.png" alt="leading">
 <p>The leading should increase proportionally to the measure. Thus, small 
 measure, less leading. Wide measure, more leading. The <strong>
 average ratio between the measure and leading is 27.8</strong>. However, this 
@@ -29,7 +27,15 @@ number is considered fairly large for typographers.</p>
 <p>Also note that <strong>the space between paragraphs should 
 be about 75% of the line height</strong> for more vertical rhythm.</p>
 
+<h3>Example</h3>
+<p>Let's see how User Expierence Magzine uses space on their type in this
+<a href="/engage/space/engage.html" target="_blank">module</a>.</p>
+
 <h3>Implementation</h3>
+<p>Implementing measure in your web site varies upon the situation. However, a
+good guideline is to adopt a grid system to help, such as the
+<a href="http://960.gs/">960 grid system</a>.</p>
+        
 <p>To add leading in CSS, use the <em>line-height</em>
 property. To change the space between paragraphs, use the <em>margin-top</em> property 
 on your <i>p</i> (paragraph) tags. For example:</p>
