--- a/public/pages/about.htm
+++ b/public/pages/about.htm
@@ -3,7 +3,7 @@
 It's supposed to be a module to teach something about design.</p>
 
 <p>The class used <a href="http://www.articulate.com/products/engage.php">Articulate Engage</a> to build their modules, but I disliked the software.
-The software was buggy and I felt that I was fighting against the medium to get it to do what I want.
+The software was buggy and I felt that I was fighting against the medium make it do what I wanted it to do.
 So I built my website from scratch in two days. Never done it before, but I learned quite a bit.
 I used my <a href="http://rubyonrails.org/">Ruby on Rails</a> knowledge I learned from my co-op at <a href="http://xtremelabs.com/">Xtreme Labs</a> to speed things up.
 I'm happy I put in the extra work (during my exam study period). Hope you like the website as much as I do.
