--- a/public/pages/hierarchy.htm
+++ b/public/pages/hierarchy.htm
@@ -1,5 +1,5 @@
 <p>Having a visual hierarchy allows readers to easily scan the website by
-picking out what information is important. The hierarchy groups information, so 
+picking out what information is important. Hierarchy groups information, so 
 users can remember the information easier.</p>
 <p>Use font, size, weight and spacing to emphasize or de-emphasize elements to 
 show their relative importance to other text. When selecting these typographic 
