--- a/public/pages/intro.htm
+++ b/public/pages/intro.htm
@@ -2,4 +2,7 @@
 look awesome. Typography was one thing that seemed really foreign to me. So I made this
 website to share what I learned.</p>
 
-<p>Hope this helps with your website!</p>
+<p>Whether it's for a redesign or building a site from scratch, here's four quick tips on how to make your typography
+look better on your website. I will warn you that you should know some
+<a href="http://www.w3schools.com/css/default.asp">CSS</a> to understand the implementation of these tips.
+Hope this helps someone!</p>
