--- a/public/pages/size_weight.htm
+++ b/public/pages/size_weight.htm
@@ -1,43 +1,44 @@
-<p>The size and weight (or styling) of the text can change the effectiveness of 
-a font.</p>
+<p>The size and weight (or styling) of the text can affect it's impact on the user. This page will go through tips on
+how to select the size and weight of your text.</p>
 
 <h3>Size</h3>
 <p>Selecting a font size can be very ambiguous. The most popular size for <strong>headlines is 18 to 20 pixels and 24 to 26 pixels</strong>. 
 The <strong>body usually has font sizes of 12 to 14 pixels</strong>.</p>
 <p>When choosing a font size, <strong>follow standard scaling</strong>, 
-a set of pre-defined sizes, to increase harmony between type. You can see all 
-the scaling sizes in the picture below.</p>
+a set of pre-defined sizes, to increase harmony between type. It's kind of like the Fibonacci numbers, its naturally appealing.
+You can see all the scaling sizes in the picture below.</p>
 
 <img src="/images/size.png" alt="size_scaling">
 
 <h3>Weight</h3>
 <p>There are two reasons that drive the selection of weight:</p>
 <ul>
-	<li><strong>Aesthetic</strong>, adding style or follow composition</li>
-	<li><strong>Content</strong>, the content dictates importance or mood, such as
-quotations</li>
+	<li><strong>Aesthetic</strong>, adding style or to follow composition</li>
+	<li><strong>Content</strong>, the content dictates importance or a mood, such as
+quotations requiring italicization</li>
 </ul>
 
-<p>Using these reasons as a guide, one can use many ways to increase the weight of a font, bolding, capitalization 
+<p>Using these reasons as a guide, one can use many methods to increase the weight of a font, such as bolding, capitalization 
 or a combination of methods.</p>
 
-<p><strong>Bolding is preferred over most methods</strong> to add weight because it&#39;s 
+<p>When selecting a method, remember that <strong>bold is preferred to add weight</strong> because it&#39;s 
 clean, noticeable and readable. Underlining adds noise to the design and are 
 often associated with links. Italicization can be hard to see. Capitalized 
-letters are harder to read because the letters have more similar height and 
+letters are harder to read because the letters have similar heights and 
 look.</p>
 
 <img src="/images/weight.jpg" alt="different_weighting">
 
 <p>Different colors can be used to add or remove weight.
-To de-emphasize text, limit the contrast of the text to its 
-background without changing the text&#39;s color. In fact, most web sites have a 
+Decreasing the opacity of the text color is often used to de-emphasize text. In fact, most web sites have a 
 white background and text color a bit lighter than pure black.</p>
-<p>Try to <strong>limit combinations and avoid
-overusing weighting methods</strong>.</p>
+<p>With all these methods however, you should try to <strong>limit combinations and avoid
+overusing weighting methods</strong> because overuse makes strong weights look normal, different weighted text
+compete against each other and the combinations might look the same. In other words, your text will look messy.
+Simplicity is key.</p>
 
 <h3>Example</h3>
-<p>Again, User Expierence Magazine's website will be used to show implementation of size and weight in this
+<p>Again, User Expierence Magazine's website will be used to show the implementation of size and weight in this
 <a href="/engage/size_weight/engage.html" target="_blank">module</a>.</p>
 
 <h3>Implementation</h3>
