--- a/public/pages/space.htm
+++ b/public/pages/space.htm
@@ -8,7 +8,7 @@ site.</p>
 <p>The <strong>Measure</strong> is the width of the body. The 
 measure should be about <strong>55 to 85 characters </strong>
 in length (including spaces) to make it easier to read. However, most sites have 
-a measure from 73 and 90 characters.</p>
+a measure between 73 and 90 characters.</p>
 <img src="/images/measure.png" alt="measure">
 
 <h3>Leading</h3>
@@ -16,7 +16,8 @@ a measure from 73 and 90 characters.</p>
 recommended that the leading should be wider than the word spacing. This 
 practice makes it easier for the eye to go along the line, instead of down the 
 lines.</p>
-<p>Statistically, the <strong>average line height to body copy 
+<p>Leading can also be measured in terms of line height, which is the font size plus leading.
+Statistically, the <strong>average line height to body copy 
 font size ratio (line height ÷ body copy font size) on web sites is 1.48 </strong>
 (1.5 is recommended).</p>
 <img src="/images/leading.png" alt="leading">
