--- a/public/pages/summary.htm
+++ b/public/pages/summary.htm
@@ -25,10 +25,10 @@
 <p>And for weight:</p>
 <ul>
 	<li>Bolding is preferred to emphasize</li>
-	<li>Limiting contrast is common to de-emphasize</li>
+	<li>Limiting opacity is common to de-emphasize text</li>
 	<li>Limit combining and avoid overdoing weighting methods</li>
 </ul>
-<p>The code below is CSS implementation:</p>
+<p>The code below is CSS implementation of weight:</p>
 <code>.some_class {<br />
 	&nbsp;&nbsp;&nbsp;
 	font-weight: bold;<br />
@@ -61,10 +61,10 @@ color: #222222; /* this is dark gray */<br />
 </ul>
 <p>Other spacing notes:</p>
 <ul>
-	<li>The average ratio between measure and ratio is 27.8, which is fairly 
+	<li>The average ratio between measure and leading is 27.8, which is fairly 
 	large</li>
 	<li>The space between paragraphs is about 75% of line height, and use the 
-	<em>top-margin</em> property on p tags to implement</li>
+	<em>top-margin</em> property on p tags to implement this</li>
 </ul>
 <h3>Hierarchy</h3>
 <p>Just remember to consider how text stands out to the whole design and compare 
