--- a/public/pages/font.htm
+++ b/public/pages/font.htm
@@ -1,7 +1,7 @@
-<p>Most people associate typography with fonts. This page will go through some basics of web fonts.</p>
+<p>Most people associate typography with fonts. This page will help you select a font (or really, a font stack).</p>
 
 <h3>Serifs</h3>
-<p>Before going into the various types of fonts, you should understand that most 
+<p>Instead of going into various fonts, you should understand that most 
 fonts generally fall under two categories, serif and sans-serif.</p>
 
 <ul>
@@ -18,11 +18,11 @@ fonts generally fall under two categories, serif and sans-serif.</p>
 distinguish characters. They have been very popular with 
 print copy. On the other hand, sans-serif fonts are more popular on computers because low resolution screens and
 slow computers make it difficult to show the serifs and  thinner strokes, especially for small font sizes.
-However, with faster computers, serif fonts are being more widely used in the body.
+However, with faster computers, serif fonts are being more widely used in the web.
 In terms of style, serif fonts look more traditional, while san-serif
 fonts are clean and modern.</p>
 
-<p>As a general rule, when using more than one font, use two fonts,
+<p>As a general rule, <strong>when using more than one font, use two fonts,
 one serif and one sans-serif</strong> (unless you&#39;re a 
 designer) because it is often difficult to tell the difference between two of 
 the same type of fonts. Also, it&#39;s common to see the less readable font as a 
@@ -53,7 +53,7 @@ the browser will go through until it finds a font that is installed in the
 computer and display it.</p>
 
 <h3>Example</h3>
-<p>Need an example? Try this <a href="/engage/font/engage.html" target="_blank">interactive module</a>,
+<p>Need an example? Try this <a href="/engage/font/engage.html" target="_blank">labelled graphic interaction</a>,
 that explains the fonts in the User Experience Magazine (UX Mag) website.
 This website will be used as an example for all of the tips.</p>
 
@@ -73,5 +73,6 @@ body { /* means for all text */ <br/>
 try Lucida Bright, then Cambria, Georgia, and then default serif font. An image of the fonts is shown below. </p>
 
 <img src="/images/font_stack.png" alt="font_stack">
-<p>See this <a href="http://www.awayback.com/revised-font-stack/">web page</a> for more recommended font stacks
+<p>The fonts above are sort of similar. Therefore, it's a good font stack.
+See this <a href="http://www.awayback.com/revised-font-stack/">web page</a> for more recommended font stacks
 and font pre-installation statistics.</p>
