--- a/public/pages/hierarchy.htm
+++ b/public/pages/hierarchy.htm
@@ -6,4 +6,6 @@ show their relative importance to other text. When selecting these typographic
 attributes, just remember to <strong>consider how the text
 stands our relative to other text and the text content&#39;s importance to the user</strong>
 (and their situation). This is very important in the design.</p>
-<p>User Experience Magazine's hierarchy is shown in this <a href="/engage/hierarchy/engage.html" target="_blank">interactive module</a>.</p>
+<p>The same website,
+User Experience Magazine, will be used to demonstrate hierarchy
+in this <a href="/engage/hierarchy/engage.html" target="_blank">labelled graphic interaction</a>.</p>
