--- a/public/pages/intro.htm
+++ b/public/pages/intro.htm
@@ -2,7 +2,10 @@
 look awesome. Typography was one thing that seemed really foreign to me. So I made this
 website to share what I learned.</p>
 
-<p>Whether it's for a redesign or building a site from scratch, here's four quick tips on how to make your typography
-look better on your website. I will warn you that you should know some
-<a href="http://www.w3schools.com/css/default.asp">CSS</a> to understand the implementation of these tips.
+<p>Whether it's for a redesign or building a site from scratch, here's four quick tips on how to make
+    web typography look better.
+    These tips will help guide you on your typographic design decisions. There's also a
+    <a href="summary">Summary page</a>  for a quick reference.
+    I will warn you that you should understand
+<a href="http://www.w3schools.com/css/default.asp">Cascading Style Sheets (CSS)</a> to implement of these tips.
 Hope this helps someone!</p>
