--- a/public/pages/size_weight.htm
+++ b/public/pages/size_weight.htm
@@ -2,7 +2,7 @@
 how to select the size and weight of your text.</p>
 
 <h3>Size</h3>
-<p>Selecting a font size can be very ambiguous. The most popular size for <strong>headlines is 18 to 20 pixels and 24 to 26 pixels</strong>. 
+<p>Selecting a font size can be very ambiguous. The most popular size for <strong>headlines are between 18 to 20 pixels and 24 to 26 pixels</strong>. 
 The <strong>body usually has font sizes of 12 to 14 pixels</strong>.</p>
 <p>When choosing a font size, <strong>follow standard scaling</strong>, 
 a set of pre-defined sizes, to increase harmony between type. It's kind of like the Fibonacci numbers, its naturally appealing.
@@ -39,10 +39,10 @@ Simplicity is key.</p>
 
 <h3>Example</h3>
 <p>Again, User Expierence Magazine's website will be used to show the implementation of size and weight in this
-<a href="/engage/size_weight/engage.html" target="_blank">module</a>.</p>
+<a href="/engage/size_weight/engage.html" target="_blank">labelled graphic interaction</a>.</p>
 
 <h3>Implementation</h3>
- <p>To implement font size, simply use the <i>font-size</i>
+ <p>To implement font size, simply use the <em>font-size</em>
 CSS property, as shown below.</p>
 
 <code>.some_class {<br />
