--- a/public/pages/space.htm
+++ b/public/pages/space.htm
@@ -29,8 +29,8 @@ number is considered fairly large for typographers.</p>
 be about 75% of the line height</strong> for more vertical rhythm.</p>
 
 <h3>Example</h3>
-<p>Let's see how User Expierence Magzine uses space on their type in this
-<a href="/engage/space/engage.html" target="_blank">module</a>.</p>
+<p>Using User Experience Magazine as an example again, let's see how space can be used in this
+<a href="/engage/space/engage.html" target="_blank">labelled graphic interaction</a>.</p>
 
 <h3>Implementation</h3>
 <p>Implementing measure in your web site varies upon the situation. However, a
@@ -44,6 +44,6 @@ on your <i>p</i> (paragraph) tags. For example:</p>
 <code>
 p {<br/>
 &nbsp;&nbsp;&nbsp;line-height: 150%;<br/>
-&nbsp;&nbsp;&nbsp;margin-top: 12px; /* assuming the font size is 16px */<br/>
+&nbsp;&nbsp;&nbsp;margin-top: 12px; /* assuming the font size is 16px, 16 * .75 = 12 */<br/>
 }
 </code>
